# opviz

./: README.md  main.py  pyproject.toml
opviz/: constants.py  plotter.py
opviz/models/: __init__.py  option.py
tests/: test_models.py
